<resources>
    <string name="app_name">GeoTracker</string>
    <string name="clear_list">Alle POI löschen</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_geo_object">GeoObjectActivity</string>
    <string name="date">Datum:</string>
    <string name="type">Kategorie:</string>
    <string name="name">Name:</string>
    <string name="name_hint">Bitte Namen eingeben...</string>
    <string name="description">Beschreibung:</string>
    <string name="description_hint">Bitte Beschreibung eingeben...</string>
    <string name="delete">Löschen</string>
    <string name="save">Speichern</string>
    <string name="upload">Upload</string>
    <string name="upload_success">Upload erfolgreich!</string>
    <string name="upload_error">Upload fehlgeschlagen!</string>
    <string name="imgdesc">imgdesc</string>
    <string name="change_type_button">Kategorie ändern</string>
    <string name="change_type">Vor dem Upload die Kategorie ändern!</string>
    <string name="search_text">Nach Kategorie suchen...</string>
    <string name="title_activity_type_list">TypeListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_poi">Neue POI</string>
    <string name="map_apps">map.apps</string>
    <string name="info">Info</string>
    <string name="author">Matthias Stein</string>
    <string name="company">con terra</string>
</resources>
