<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.mstein.geotracker.GeoObjectActivity"
    tools:showIn="@layout/activity_geo_object">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveGeoObject"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="removeGeoObject"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/delete" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="uploadFeature"
        android:text="@string/upload" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="left|center"
        android:text="@string/name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/nameText"
        android:layout_alignParentStart="true"
        android:gravity="left|center"
        android:text="@string/type"
        android:textSize="20dp" />

    <Button
        android:id="@+id/set_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeDatatype"
        android:text="@string/change_type_button"
        android:layout_above="@+id/typeText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/typeText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/type"
        android:layout_alignParentStart="true"
        android:gravity="left|center"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/typeText"
        android:layout_alignParentStart="true"
        android:gravity="left|center"
        android:text="@string/date"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:gravity="left|center"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/dateText"
        android:layout_alignParentStart="true"
        android:gravity="left|center"
        android:text="@string/description"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:hint="@string/description_hint" />/>

</RelativeLayout>
